hls/serial_fft_hls/solution1/.autopilot/db/fft_serial.pp.0.cpp.clang-tidy.loop-label.out.log
C:\Users\ntoum\Desktop\thesis_repo\hls\serial_fft_hls\solution1\.autopilot\db\fft_serial.pp.0.cpp:1316:7: warning: Added loop label VITIS_LOOP_1207_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1207_1: 
C:\Users\ntoum\Desktop\thesis_repo\hls\serial_fft_hls\solution1\.autopilot\db\fft_serial.pp.0.cpp:1316:7: note: FIX-IT applied suggested code changes
C:\Users\ntoum\Desktop\thesis_repo\hls\serial_fft_hls\solution1\.autopilot\db\fft_serial.pp.0.cpp:2290:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
C:\Users\ntoum\Desktop\thesis_repo\hls\serial_fft_hls\solution1\.autopilot\db\fft_serial.pp.0.cpp:2290:5: note: FIX-IT applied suggested code changes
C:\Users\ntoum\Desktop\thesis_repo\hls\serial_fft_hls\solution1\.autopilot\db\fft_serial.pp.0.cpp:2304:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
C:\Users\ntoum\Desktop\thesis_repo\hls\serial_fft_hls\solution1\.autopilot\db\fft_serial.pp.0.cpp:2304:5: note: FIX-IT applied suggested code changes
C:\Users\ntoum\Desktop\thesis_repo\hls\serial_fft_hls\solution1\.autopilot\db\fft_serial.pp.0.cpp:2318:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
C:\Users\ntoum\Desktop\thesis_repo\hls\serial_fft_hls\solution1\.autopilot\db\fft_serial.pp.0.cpp:2318:5: note: FIX-IT applied suggested code changes
C:\Users\ntoum\Desktop\thesis_repo\hls\serial_fft_hls\solution1\.autopilot\db\fft_serial.pp.0.cpp:3947:7: warning: Added loop label VITIS_LOOP_1247_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1247_1: 
C:\Users\ntoum\Desktop\thesis_repo\hls\serial_fft_hls\solution1\.autopilot\db\fft_serial.pp.0.cpp:3947:7: note: FIX-IT applied suggested code changes
C:\Users\ntoum\Desktop\thesis_repo\hls\serial_fft_hls\solution1\.autopilot\db\fft_serial.pp.0.cpp:6117:5: warning: Added loop label VITIS_LOOP_95_1:   [xilinx-label-all-loops]
    for (int i = 0; i < FFT_LOG2_N; i++) {
    ^~~
    VITIS_LOOP_95_1: 
C:\Users\ntoum\Desktop\thesis_repo\hls\serial_fft_hls\solution1\.autopilot\db\fft_serial.pp.0.cpp:6117:5: note: FIX-IT applied suggested code changes
C:\Users\ntoum\Desktop\thesis_repo\hls\serial_fft_hls\solution1\.autopilot\db\fft_serial.pp.0.cpp:6170:9: error: Invalid Directive: for current device, mul + dsp is invalid combination for bind_op [clang-diagnostic-error]
#pragma HLS BIND_OP variable=p_rr op=mul impl=dsp latency=3
        ^
C:\Users\ntoum\Desktop\thesis_repo\hls\serial_fft_hls\solution1\.autopilot\db\fft_serial.pp.0.cpp:6171:9: error: Invalid Directive: for current device, mul + dsp is invalid combination for bind_op [clang-diagnostic-error]
#pragma HLS BIND_OP variable=p_ii op=mul impl=dsp latency=3
        ^
C:\Users\ntoum\Desktop\thesis_repo\hls\serial_fft_hls\solution1\.autopilot\db\fft_serial.pp.0.cpp:6172:9: error: Invalid Directive: for current device, mul + dsp is invalid combination for bind_op [clang-diagnostic-error]
#pragma HLS BIND_OP variable=p_ri op=mul impl=dsp latency=3
        ^
C:\Users\ntoum\Desktop\thesis_repo\hls\serial_fft_hls\solution1\.autopilot\db\fft_serial.pp.0.cpp:6173:9: error: Invalid Directive: for current device, mul + dsp is invalid combination for bind_op [clang-diagnostic-error]
#pragma HLS BIND_OP variable=p_ir op=mul impl=dsp latency=3
        ^
